# rlox-pt2

./: Cargo.toml  README.md  cycle.lox  fib.lox  gc.lox  miri.sh  tarpaulin.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  parse_success.rs  rlox.rs
src/: chunk.rs  lex.rs  main.rs  object.rs  parse.rs  ui.rs  util.rs  valid.rs  value.rs  vm.rs
src/bytecode/: chunk.rs  interner.rs
src/common/: alloc.rs  mod.rs  test_util.rs  try_as.rs  ui.rs  util.rs
src/compiler/: ast.rs  codegen.rs  lex.rs  mod.rs  parse.rs
src/repr/: chunk.rs  function.rs  interner.rs  mod.rs  native_function.rs  object.rs  scope.rs  string.rs  upvalue.rs  valid.rs  value.rs
src/snapshots/: rlox__main__tests__floating_expr.snap  rlox__parse__tests__floating_expr.snap  rlox__parse__tests__invalid_token.snap  rlox__parse__tests__missing_lhs.snap  rlox__parse__tests__missing_op.snap  rlox__parse__tests__missing_parens.snap  rlox__parse__tests__missing_primary.snap  rlox__parse__tests__missing_rhs.snap  rlox__parse__tests__remaining_tokens.snap  rlox__parse__tests__rparens.snap  rlox__test_errors__floating_expr.snap  rlox__test_errors__missing_lhs.snap  rlox__test_errors__missing_op.snap  rlox__test_errors__missing_primary.snap  rlox__test_errors__missing_rhs.snap  rlox__test_errors__remaining_tokens.snap  rlox__test_errors__rparens.snap  rlox__test_errors__snap_bytecode.snap  rlox__test_runtime___parse_test_precedence.snap  rlox__test_runtime__add_mul.snap  rlox__test_runtime__and_condition.snap  rlox__test_runtime__and_short_circuit.snap  rlox__test_runtime__assign_a_string.snap  rlox__test_runtime__assign_parens.snap  rlox__test_runtime__assignment.snap  rlox__test_runtime__assignment_in_condition.snap  rlox__test_runtime__assignment_in_parens.snap  rlox__test_runtime__bad_call_nil.snap  rlox__test_runtime__bad_call_num.snap  rlox__test_runtime__bad_call_str.snap  rlox__test_runtime__bad_call_var.snap  rlox__test_runtime__basic_else.snap  rlox__test_runtime__basic_for_loop.snap  rlox__test_runtime__basic_function_call.snap  rlox__test_runtime__basic_if.snap  rlox__test_runtime__basic_scope.snap  rlox__test_runtime__basic_then.snap  rlox__test_runtime__basic_while_loop.snap  rlox__test_runtime__bigger_scope_for_loop.snap  rlox__test_runtime__brackets_mandatory.snap  (+115 more)
src/value/: function.rs  mod.rs  object.rs  string.rs  upvalue.rs  valid.rs  (+1 more)
tests/: io_errors.rs  parse_errors.rs  util.rs
(+59 files in other folders)
