[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
logos = "0.13.0"
num_enum = "0.6.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "fmt" ] }

[features]
verbose_vm = []
verbose_parsing = []
verbose_allocations = []
instrument = []

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
insta = { version = "1.29.0", features = ["yaml"] }
strip-ansi-escapes = "0.1.1"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

